# vietnamese-gpt2

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  generate_poem.py  inference.py  perplexity.py  pyproject.toml  requirements.txt  run_train.sh  sft_poem.py  test.py  tokenizer.py  train.py  utils.py
artifacts/tokenizer/: tokenizer.json  tokenizer_config.json
backend/: Dockerfile  requirements.txt
backend/app/: main.py
data/: download_datasets.py  process_vi_wiki.py
data_prep/: deduplicate.py  deduplicate_poem.py
data_prep/news/: download_datasets.py
data_prep/poem/: crawl_poem.py  prepare_poem_data.py  scrape_poem_content.py
data_prep/wiki/: crawl_vi_wiki.py  process_vi_wiki.py
scripts/: train.sh  train_sft_poem.sh
src/: __init__.py  config.py  generate.py  generate_base.py  generate_poem.py  inference.py  train.py  train_1.py  train_2.py  train_sft.py  train_tokenizer.py  utils.py
tests/: test_chat_api.py
ui/: Dockerfile  package.json
ui/app/: globals.css  layout.js  page.js
vietnamese_gpt2/runs/Feb06_18-44-58_vlai-server/: events.out.tfevents.1770378298.vlai-server.923181.0
vietnamese_gpt2/runs/Feb07_04-46-19_vlai-server/: events.out.tfevents.1770414379.vlai-server.1011671.0
vietnamese_gpt2/runs/Feb07_12-57-28_vlai-server/: events.out.tfevents.1770443848.vlai-server.1153477.0
vietnamese_gpt2/runs/Feb08_01-03-25_vlai-server/: events.out.tfevents.1770487405.vlai-server.1261761.0
vietnamese_gpt2/runs/Feb08_10-56-23_vlai-server/: events.out.tfevents.1770522983.vlai-server.1278250.0
vietnamese_gpt2/runs/Feb08_10-58-13_vlai-server/: events.out.tfevents.1770523093.vlai-server.1279322.0
vietnamese_tokenizer/: merges.txt  tokenizer.json  vocab.json
