[project]
name = "vietnamese-llm-pretraining"
version = "0.1.0"
description = "Pre-train a Vietnamese GPT-2 language model from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.25.0",
    "datasets>=2.15.0",
    "multiprocess>=0.70.15",
    "ninja>=1.13.0",
    "numpy>=2.4.2",
    "packaging>=26.0",
    "protobuf>=6.33.5",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.15.0",
    "tokenizers>=0.15.0",
    "torch>=2.2",
    "transformers>=4.35.0",
    "wandb>=0.16.0",
    "webdriver-manager>=4.0.2",
]
