[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese-llm-pretraining"
version = "0.1.0"
description = "Pre-train a Vietnamese GPT-2 language model from scratch and SFT for poetry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.6.0",
    "datasets>=2.15.0",
    "loguru",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "selenium>=4.15.0",
    "tokenizers>=0.15.0",
    "torch>=2.2",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
    "wandb>=0.16.0",
    "webdriver-manager>=4.0.2",
]

[tool.setuptools.packages.find]
include = ["src"]
