[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese-llm-pretraining"
version = "0.1.0"
description = "Multi-stage Vietnamese GPT-2 pretraining from scratch and continued poem-domain pretraining"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "beautifulsoup4==4.14.3",
    "curl-cffi==0.14.0",
    "datasets==3.6.0",
    "loguru==0.7.3",
    "pandas==2.3.3",
    "pyarrow==23.0.0",
    "requests==2.32.5",
    "selenium==4.41.0",
    "tokenizers==0.21.0",
    "torch==2.10.0",
    "tqdm==4.67.1",
    "transformers==4.55.4",
    "wandb==0.24.0",
    "webdriver-manager==4.0.2",
]

[tool.setuptools.packages.find]
include = ["src"]